# rs_node

./: .gitignore  Cargo.toml  DEV.md  README.md  rustfmt.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: dump_replay.rs  lib.rs  main.rs  tracing.rs
contracts/: dex_contract.wat  simple_counter.wat  token_contract.wat
core/: Cargo.toml  build.rs
core/src/: config.rs  context.rs  genesis.rs  lib.rs  metrics.rs  proto.rs  proto_enc.rs
core/src/bic/: base.rs  base_wasm.rs  base_wasm_safe.rs  coin.rs  coin_symbol_reserved.rs  contract.rs  epoch.rs  mod.rs  sol.rs  sol_bloom.rs
core/src/bls/: aggsig.rs  bls12_381.rs  mod.rs
core/src/consensus/: agg_sig.rs  attestation.rs  consensus.rs  entry.rs  entry_gen.rs  fabric.rs  genesis.rs  kv.rs  mod.rs  tx.rs
core/src/misc/: archiver.rs  blake3.rs  bls12_381.rs  mnesiakv.rs  mod.rs  reed_solomon.rs  rocksdb.rs  tracing.rs  utils.rs  vanilla_ser.rs
core/src/node/: anr.rs  etf_ser.rs  handler.rs  mod.rs  msg_v2.rs  node_gen.rs  peers.rs  proto.rs  proto_ser.rs  protocol.rs  reassembler.rs  socket_gen.rs  state.rs
core/src/reed_solomon/: mod.rs  reassembler.rs  shards.rs
core/src/reedsolomon/: mod.rs  reassembler.rs  shards.rs
core/src/test_data/: ping.rs
core/src/utils/: archiver.rs  blake3.rs  bls12_381.rs  ip_resolver.rs  misc.rs  mnesiakv.rs  mod.rs  reed_solomon.rs  rocksdb.rs  vanilla_ser.rs
core/src/wasm/: base.rs  mod.rs  opcodes.rs  runtime.rs  safe.rs  test_real_contracts.rs  test_wasm_runtime.rs  tests.rs
core/tests/: common.rs  config_test.rs
dashboard/: Cargo.toml
dashboard/src/views/: peers.rs
docs/: PROTOCOL.md  diagrams.excalidraw
http/: Cargo.toml
http/src/: lib.rs
http/src/routes/: metrics.rs  mod.rs  peers.rs
http/src/views/: metrics.rs  peers.rs
http/static/: dashboard.html  simple-dashboard.html
plot/: Cargo.toml
plot/src/: lib.rs  state.rs
plot/src/routes/: entries.rs  metrics.rs  mod.rs  peers.rs
plot/src/views/: entries.rs  entry.rs  layout.rs  metrics.rs  peers.rs
rs_plot/: Cargo.toml
rs_plot/src/: lib.rs  models.rs  state.rs
rs_plot/src/routes/: peers.rs
rs_plot/src/views/: entries.rs  entry.rs  layout.rs  peers.rs
scripts/: compile-contracts.sh  rewrite-pcap.sh  rewrite-pcaps.sh
src/: genesis.rs  main.rs  proto.rs  proto_enc.rs
src/bic/: epoch.rs
src/test_data/: ping.rs
tests/: proto_test.rs
