[workspace]
resolver = "3"

members = ["core", "client", "plot"]

[workspace.dependencies]
ama_core = { path = "core" }
plot = { path = "plot" }

[patch.crates-io]
bls12_381 = { git = "https://github.com/vans163/bls12_381" } # has newer deps
reed-solomon-simd = { git = "https://github.com/AndersTrier/reed-solomon-simd" } # 3.1.0
