[workspace]
resolver = "3"

members = ["core", "client", "dashboard"]

[workspace.dependencies]
ama_core = { path = "core" }
dashboard = { path = "dashboard" }

[patch.crates-io]
bls12_381 = { git = "https://github.com/vans163/bls12_381" } # has newer deps
reed-solomon-simd = { git = "https://github.com/AndersTrier/reed-solomon-simd" } # 3.1.0
