[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
eetf = "0.10.0"
num-traits = "0.2.19"
flate2 = { version = "1.0.25", features = ["zlib"] }
miniz_oxide = "0.8.9"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.98"
#reedsolomon_ex = { git = "https://github.com/amadeus-robot/reedsolomon_ex", branch = "main" }
reed-solomon-simd = { git = "https://github.com/AndersTrier/reed-solomon-simd" }
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"