[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
eetf = "0.10.0"
num-traits = "0.2.19"
flate2 = { version = "1.0.25", features = ["zlib"] }
miniz_oxide = "0.8.9"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.98"
reed-solomon-simd = "3.0.1"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
bls12_381 = "0.8.0"
blst = "0.3"
thiserror = "1.0"
group = "0.13"

[patch.crates-io]
bls12_381 = { git = "https://github.com/vans163/bls12_381", branch = "main" } # has newer deps
reed-solomon-simd = { git = "https://github.com/AndersTrier/reed-solomon-simd", branch = "master" } # 3.1.0
