[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
name = "core"
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false

[dependencies]
eetf = "0.10.0"
num-traits = "0.2.19"
flate2 = { version = "1.0.25", features = ["zlib"] }
miniz_oxide = "0.8.9"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
bs58 = "0.5.1"
anyhow = "1.0.98"
reed-solomon-simd = "3.1.0"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
bincode = "2.0.1"
blake3 = "1.8.2"
bls12_381 = "0.8.0"
blst = "0.3.15"
thiserror = "2.0.15"
group = "0.13.0"
once_cell = "1.19.0"
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "snappy"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }

[features]
rayon = ["blake3/rayon"] # quick way to enable rayon, may not need it