[package]
name = "http"
version = "0.1.0"
edition = "2024"

[lib]
name = "http"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
axum = { version = "0.7.9", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
anyhow = "1.0.98"
tower-http = { version = "0.6", features = ["fs"] }
ama_core = { path = "../core" }
